[gd_scene load_steps=8 format=3 uid="uid://cyksa23nxqjwn"]

[ext_resource type="Script" path="res://Assets/Common/Switches/Selector Switch/selector_switch.gd" id="1_w2284"]
[ext_resource type="Material" path="res://Assets/Materials/silver_metal.tres" id="2_jm5jg"]
[ext_resource type="Material" uid="uid://c1j8toxlvfuds" path="res://Assets/Materials/black_plastic.tres" id="3_ym3f2"]
[ext_resource type="PackedScene" uid="uid://gxikcyses8jk" path="res://Assets/Common/Switches/Selector Switch/selector_switch.glb" id="4_o0pj7"]
[ext_resource type="FontFile" uid="uid://cqsshl4y7vp2w" path="res://Assets/Fonts/Roboto Condensed/RobotoCondensed-VariableFont_wght.ttf" id="5_hmpvk"]
[ext_resource type="AudioStream" uid="uid://wlb0cgw34y6m" path="res://Assets/Audio/breaker_switch.mp3" id="5_o4khq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_isvvb"]
size = Vector3(0.0205078, 0.0341797, 0.0185547)

[node name="Selector Switch" type="Node3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_w2284")

[node name="selector_switch" parent="." instance=ExtResource("4_o0pj7")]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -1.38783e-11, 0, -0.00015875)

[node name="Base" parent="selector_switch" index="0"]
material_override = ExtResource("2_jm5jg")

[node name="Handle" parent="selector_switch" index="1"]
transform = Transform3D(1, 3.48683e-35, -3.61112e-35, 0, -3.57628e-07, -1, 0, 1, -3.57628e-07, 0, 0, -4.88111e-05)
material_override = ExtResource("2_jm5jg")

[node name="CSGBox3D2" type="CSGBox3D" parent="selector_switch/Handle" index="0"]
transform = Transform3D(-8.74228e-09, -4.66436e-35, 0.2, -0.2, -7.15256e-08, -8.74228e-09, 7.15256e-08, -0.2, 3.12648e-15, -4.2725e-05, 6.56703e-05, -0.000270959)
size = Vector3(0.0897217, 0.002, 0.0112915)
material = ExtResource("3_ym3f2")

[node name="CSGTorus3D" type="CSGTorus3D" parent="selector_switch"]
transform = Transform3D(0.026, -7.52316e-37, -1.26236e-37, 0, 0.026, 0, 0, 0, 0.026, 0, 0.00489063, -2.86229e-17)
inner_radius = 0.402286
outer_radius = 0.446371
sides = 24
ring_sides = 3
material = ExtResource("3_ym3f2")

[node name="Left" type="StaticBody3D" parent="selector_switch"]
transform = Transform3D(1, 0, -4.85524e-36, 0, 1, 0, 0, 0, 1, -0.00158787, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="selector_switch/Left"]
transform = Transform3D(1, 0, -4.85524e-36, 1.9421e-35, 1, 0, 0, 0, 1, -0.00863382, 0, 0)
shape = SubResource("BoxShape3D_isvvb")

[node name="Right" type="StaticBody3D" parent="selector_switch"]
transform = Transform3D(1, 0, -4.85524e-36, 0, 1, 0, 0, 0, 1, -0.00158787, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="selector_switch/Right"]
transform = Transform3D(1, 0, -4.85524e-36, 0, 1, 0, 0, 0, 1, 0.0119923, 0, 0)
shape = SubResource("BoxShape3D_isvvb")

[node name="CSGBox3D" type="CSGBox3D" parent="selector_switch"]
transform = Transform3D(0.05, 0, 7.44793e-35, 0, -2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, -2.26288e-05, 0.012883, 0.0200607)
size = Vector3(0.719238, 0.17273, 0.0166133)
material = ExtResource("3_ym3f2")

[node name="Label3D" type="Label3D" parent="selector_switch/CSGBox3D"]
transform = Transform3D(0.45, 2.01948e-28, 0, 0, 0.45, 1.69407e-21, 0, -1.69407e-21, 0.45, -0.236182, 0, 0.0108409)
sorting_offset = 1.0
shaded = true
text = "OFF"
font = ExtResource("5_hmpvk")
font_size = 35
outline_size = 0

[node name="Label3D2" type="Label3D" parent="selector_switch/CSGBox3D"]
transform = Transform3D(0.45, 5.04871e-28, 0, 0, 0.45, 2.5411e-21, 0, -2.5411e-21, 0.45, -0.00445222, 0, 0.010841)
sorting_offset = 1.0
shaded = true
text = "AUTO"
font = ExtResource("5_hmpvk")
font_size = 35
outline_size = 0

[node name="Label3D3" type="Label3D" parent="selector_switch/CSGBox3D"]
transform = Transform3D(0.45, 5.04871e-28, 0, 0, 0.45, 2.5411e-21, 0, -2.5411e-21, 0.45, 0.239263, 0, 0.010841)
sorting_offset = 1.0
shaded = true
text = "OPEN"
font = ExtResource("5_hmpvk")
font_size = 35
outline_size = 0

[node name="Move" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_o4khq")
max_distance = 6.0

[node name="rotate_opposite" type="Node" parent="."]

[connection signal="input_event" from="selector_switch/Left" to="." method="switch_click_left"]
[connection signal="input_event" from="selector_switch/Right" to="." method="switch_click_right"]

[editable path="selector_switch"]
